force-app/main/default/objects/Nature_Mission_Par_Branche__mdt/Nature_Mission_Par_Branche__mdt.object-meta.xml
<CustomObject>
    <label>Nature Mission Par Branche</label>
    <pluralLabel>Nature Mission Par Branche</pluralLabel>
</CustomObject>