force-app/main/default/objects/Nature_Mission_Par_Branche__mdt/fields/Branche__c.field-meta.xml
<CustomField>
    <fullName>Branche__c</fullName>
    <label>Branche</label>
    <length>255</length>
    <type>Text</type>
</CustomField>