force-app/main/default/objects/Nature_Mission_Par_Branche__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>