force-app/main/default/objects/Nature_Mission_Par_Branche__mdt/fields/Nature_De_Mission__c.field-meta.xml
<CustomField>
    <fullName>Nature_De_Mission__c</fullName>
    <label>Nature De Mission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>