force-app/main/default/objects/Nature_Mission_Par_Branche__mdt/fields/Type_Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Type_Prestataire__c</fullName>
    <label>Type Prestataire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>